cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SFML_DIR "/usr/lib/cmake/SFML")
project(Asteroids)
find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
find_package(Threads)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/fonts DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/sounds DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(${PROJECT_NAME} main.cpp)
add_library(lib STATIC Asteroids.cpp)
target_compile_options(${PROJECT_NAME} PUBLIC -pthread)
target_link_libraries(${PROJECT_NAME} lib sfml-graphics sfml-audio Threads::Threads pthread)
